--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <a href="#contact">Contatti</a>
               </li>
               <li>
-                <a href="http://qgis.org/it/site/" target="_blank">Sito ufficiale di QGIS</a>
+                <a href="http://qgis.org/it/site/" target="_blank">Sito di QGIS</a>
               </li>
             </ul>
           </div>
@@ -122,7 +122,7 @@
             <div class="col-sm-4">
               <h3>Discussioni online</h3>
               <p class="lead"><a href="http://gfoss.it/cgi-bin/mailman/listinfo/gfoss">
-                Unisciti a noi anche da remoto</a>. La mailing list di GFOSS è un'associazione che tratta di software
+                Unisciti a noi anche da remoto</a>. GFOSS è un'associazione che tratta di software
                 geografici open source aperta a tutti.
               </p>
             </div>
@@ -144,8 +144,8 @@
                 <li>Coordinamento dello sviluppo</li>
                 <li>Divulgazione di QGIS: incontri, articoli in riviste del sttore, discussioni in ambito GIS</li>
                 <li>Discussione dell'utilizzo di QGIS in settori specifici (come geologia, urbanistica, ambiente, ecc.)</li>
-                <li>Organizzazione degli incontri degli utenti</li>
-                <li>Punto centrale di possibili sviluppo di gruppi locali</li>
+                <li>Organizzazione degli incontri utenti</li>
+                <li>Punto centrale di possibili sviluppi di gruppi locali</li>
                 <li>Unisciti a noi e condividi le tue idee!</li>
               </ul>
             </p>
@@ -174,8 +174,8 @@
           <hr class="featurette-divider">
 
           <div class="featurette">
-            <h2 class="featurette-heading">Sei interessato alle tematiceh GIS in ambito open source?... non sei ancora un utente GIS ma vorresti unirti a noi e ricevere aiuto?</h2>
-            <p class="lead">QGIS viene sviluppato da un gruppo di volontari. Puoi partecipare a QGIS nei vari canali di supporto, segnalare problemi, migliorare la documentazione e la traduzione, creare tutorial,promuovere l'uso di QGIS e supportare gli sviluppatori nel loro lavoro.</p>
+            <h2 class="featurette-heading">Sei interessato alle tematiche GIS in ambito open source?... non sei ancora un utente GIS ma vorresti unirti a noi e ricevere aiuto?</h2>
+            <p class="lead">QGIS viene sviluppato da un gruppo di volontari. Puoi partecipare a QGIS nei vari canali di supporto, segnalare problemi, migliorare la documentazione e la traduzione, creare tutorial, promuovere l'uso di QGIS e supportare gli sviluppatori nel loro lavoro.</p>
           </div>
 
           <hr class="featurette-divider">
