--- a/index.html
+++ b/index.html
@@ -42,25 +42,25 @@
         </div>
         <div class="collapse navbar-collapse" id="nav-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="http://qgis.org/##/site/about/index.html">Scopri QGIS</a></li>
-            <li><a href="http://qgis.org/##/site/forusers/index.html">Per gli Utenti</a></li>
-            <li><a href="http://qgis.org/##/site/getinvolved/index.html">Partecipa</a></li>
-            <li><a href="http://qgis.org/##/docs/index.html">Documentazione</a></li>
+            <li><a href="http://qgis.org/it/site/about/index.html">Scopri QGIS</a></li>
+            <li><a href="http://qgis.org/it/site/forusers/index.html">Per gli Utenti</a></li>
+            <li><a href="http://qgis.org/it/site/getinvolved/index.html">Partecipa</a></li>
+            <li><a href="http://qgis.org/it/docs/index.html">Documentazione</a></li>
             <li class="navbar-dropdown">
               <div class="select-dropdown">
               <select id="other_groups">
                 <option value="" title="none">Altri gruppi utenti QGIS</option>
                 <optgroup label="U.S.">
-                  <option title="DC" value="http://www.meetup.com/qgis_us/Washington-DC/">DC</option>
-                  <option title="Monterey" value="http://www.meetup.com/qgis_us/Monterey-CA/">Monterey</option>
+                  <option title="DC" value="http://qgis.us/">DC</option>
                 </optgroup>
                 <optgroup label="Europe">
-                  <option title="Switzerland" value="http://qgis.ch">Switzerland</option>
+                  <option title="Italy" value="http://qgis.it/">Italy</option>
                   <option title="Netherlands" value="http://www.qgis.nl/">Netherlands</option>
+                  <option title="Switzerland" value="http://qgis.ch">Switzerland</option>
                   <option title="UK" value="http://qgis.uk/">United Kingdom</option>
                   <option title="UK" value="http://ukqgis.wordpress.com/">United Kingdom</option>
                   <option title="UK" value="https://ieqgis.wordpress.com/category/qgis/">United Kingdom</option>
-                  <option title="Italy" value="http://qgis.it/">Italy</option>
+                  
                 <optgroup label="World">
                   <option title="ANZ" value="https://sites.google.com/site/ausqgis/home">Australia &amp; NZ</option>
                 </optgroup>
