--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <html>
   <head>
-    <title>Gruppo Utenti QGIS IT</title>
+    <title>Gruppo degli Utenti italiani di QGIS</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:900,100' rel='stylesheet' type='text/css'>
@@ -42,26 +42,24 @@
         </div>
         <div class="collapse navbar-collapse" id="nav-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="http://qgis.org/it/site/about/index.html">Scopri QGIS</a></li>
-            <li><a href="http://qgis.org/it/site/forusers/index.html">Per gli Utenti</a></li>
-            <li><a href="http://qgis.org/it/site/getinvolved/index.html">Partecipa</a></li>
-            <li><a href="http://qgis.org/it/docs/index.html">Documentazione</a></li>
+            <li><a href="http://qgis.org/##/site/about/index.html">Scopri QGIS</a></li>
+            <li><a href="http://qgis.org/##/site/forusers/index.html">Per gli ptenti</a></li>
+            <li><a href="http://qgis.org/##/site/getinvolved/index.html">Partecipa</a></li>
+            <li><a href="http://qgis.org/##/docs/index.html">Documentazione</a></li>
             <li class="navbar-dropdown">
               <div class="select-dropdown">
               <select id="other_groups">
                 <option value="" title="none">Altri gruppi utenti QGIS</option>
-                <optgroup label="U.S.">
-                  <option title="DC" value="http://qgis.us/">DC</option>
+                <optgroup label="America">
+                  <option title="USA" value="http://qgis.us/">U.S.A.</option>
                 </optgroup>
-                <optgroup label="Europe">
-                  <option title="Italy" value="http://qgis.it/">Italy</option>
-                  <option title="Netherlands" value="http://www.qgis.nl/">Netherlands</option>
-                  <option title="Switzerland" value="http://qgis.ch">Switzerland</option>
-                  <option title="UK" value="http://qgis.uk/">United Kingdom</option>
-                  <option title="UK" value="http://ukqgis.wordpress.com/">United Kingdom</option>
-                  <option title="UK" value="https://ieqgis.wordpress.com/category/qgis/">United Kingdom</option>
-                  
-                <optgroup label="World">
+                <optgroup label="Europa">
+                  <option title="UK" value="http://qgis.uk/">Gran Bretagna</option>
+                  <option title="IE" value="https://ieqgis.wordpress.com/category/qgis/">Irlanda</option>
+                  <option title="Olanda" value="http://www.qgis.nl/">Olanda</option>
+                  <option title="Portogallo" value="http://qgis.pt/">Portogallo</option>
+                  <option title="Svizzera" value="http://qgis.ch">Svizzera</option>
+                <optgroup label="Oceania">
                   <option title="ANZ" value="https://sites.google.com/site/ausqgis/home">Australia &amp; NZ</option>
                 </optgroup>
               </select>
