--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <html>
   <head>
-    <title>Gruppo degli Utenti italiani di QGIS</title>
+    <title>Gruppo degli utenti italiani di QGIS</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
     <link href='http://fonts.googleapis.com/css?family=Lato:900,100' rel='stylesheet' type='text/css'>
@@ -43,7 +43,7 @@
         <div class="collapse navbar-collapse" id="nav-collapse">
           <ul class="nav navbar-nav">
             <li><a href="http://qgis.org/##/site/about/index.html">Scopri QGIS</a></li>
-            <li><a href="http://qgis.org/##/site/forusers/index.html">Per gli ptenti</a></li>
+            <li><a href="http://qgis.org/##/site/forusers/index.html">Per gli utenti</a></li>
             <li><a href="http://qgis.org/##/site/getinvolved/index.html">Partecipa</a></li>
             <li><a href="http://qgis.org/##/docs/index.html">Documentazione</a></li>
             <li class="navbar-dropdown">
@@ -74,7 +74,7 @@
     <div class="container">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 page-title">Gruppo Utenti QGIS IT</div>
+          <div class="col-xs-12 page-title">Gruppo degli utenti italiani di QGIS</div>
         </div>
         <div class="row">
           <div class="col-sm-12 col-md-6 col-md-offset-3">
@@ -139,11 +139,11 @@
             <h2 class="featurette-heading">Obiettivi del gruppo:</h2>
             <p class="lead">
               <ul class="lead">
-                <li>Coordinamento dello sviluppo</li>
-                <li>Divulgazione di QGIS: incontri, articoli in riviste del sttore, discussioni in ambito GIS</li>
+                <li>Sostegno e coordinamento della traduzione in italiano di interfaccia, documentazione e sito</li>
+                <li>Sostegno e coordinamento dello sviluppo</li>
+                <li>Divulgazione: incontri, articoli su riviste, discussioni in ambito GIS</li>
                 <li>Discussione dell'utilizzo di QGIS in settori specifici (come geologia, urbanistica, ambiente, ecc.)</li>
-                <li>Organizzazione degli incontri utenti</li>
-                <li>Punto centrale di possibili sviluppi di gruppi locali</li>
+                <li>Organizzazione di incontri fra utenti</li>
                 <li>Unisciti a noi e condividi le tue idee!</li>
               </ul>
             </p>
@@ -172,8 +172,8 @@
           <hr class="featurette-divider">
 
           <div class="featurette">
-            <h2 class="featurette-heading">Sei interessato alle tematiche GIS in ambito open source?... non sei ancora un utente GIS ma vorresti unirti a noi e ricevere aiuto?</h2>
-            <p class="lead">QGIS viene sviluppato da un gruppo di volontari. Puoi partecipare a QGIS nei vari canali di supporto, segnalare problemi, migliorare la documentazione e la traduzione, creare tutorial, promuovere l'uso di QGIS e supportare gli sviluppatori nel loro lavoro.</p>
+            <h2 class="featurette-heading">Sei interessato alle tematiche GIS in ambito open source? Non sei ancora un utente GIS ma vorresti unirti a noi e ricevere aiuto?</h2>
+            <p class="lead">QGIS viene sviluppato da un gruppo di volontari. Puoi partecipare a QGIS nei vari canali di supporto, segnalare problemi, migliorare la documentazione e la traduzione, creare tutorial, promuovere l'uso di QGIS e sostenere gli sviluppatori nel loro lavoro.</p>
           </div>
 
           <hr class="featurette-divider">
@@ -181,9 +181,8 @@
           <div class="featurette">
             <h2 class="featurette-heading">Discutiamo anche da remoto. <span class="muted">Unisciti e presentati.</span></h2>
             <p class="lead">
-              Non riesci ad organizzare un incontro locale? Nessun problema, iscriviti alla nostra 
-              <a href="http://gfoss.it/cgi-bin/mailman/listinfo/gfoss">mailing List</a>.
-              Tutti sono i benvenuti!
+              Non riesci ad organizzare un incontro locale? Nessun problema, iscriviti alla 
+              <a href="http://gfoss.it/cgi-bin/mailman/listinfo/gfoss">mailing list di GFOSS</a>, che tratta di tutti i software liberi in ambito geografico. Tutti sono i benvenuti!
             </p>
           </div>
 
@@ -191,8 +190,7 @@
           <a name="contact"></a>
           <div class="featurette">
             <h2 class="featurette-heading">Vuoi avere maggiori informazioni? <span class="muted">Iscriviti.</span></h2>
-            <p class="lead">Puoi iscriverti alla <a href="http://gfoss.it/cgi-bin/mailman/listinfo/gfoss">mailing List</a>
-            per restare in costante aggiornamento!</p>
+            <p class="lead">Puoi iscriverti alla <a href="http://gfoss.it/cgi-bin/mailman/listinfo/gfoss">mailing list</a>  per rimanere aggiornato.</p>
           </div>
 
           <hr class="featurette-divider">
