--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </div>
         <div class="container">
           <div class="row">
-            <div class="col-sm-6 lead byline">Sostieni il gruppo utenti di <a href="http://qgis.org/it/site/">QGIS</a>, un software GIS libero e open source.
+            <div class="col-sm-6 lead byline">Sostieni il gruppo degli utenti italiani di <a href="http://qgis.org/it/site/">QGIS</a>, un software GIS libero e open source.
 	    </div>
             <div class="col-md-6"></div>
           </div>
@@ -118,15 +118,11 @@
           -->
             <div class="col-sm-4">
               <h3>Discussioni online</h3>
-              <p class="lead"><a href="http://gfoss.it/cgi-bin/mailman/listinfo/gfoss">
-                Unisciti a noi anche da remoto</a>. GFOSS è un'associazione che tratta di software
-                geografici open source aperta a tutti.
-              </p>
+              <p class="lead">Unisciti a noi anche da remoto, tramite la <a href="http://gfoss.it/cgi-bin/mailman/listinfo/gfoss">mailing list di GFOSS</a>. GFOSS è una comunità aperta a tutti. GFOSS.it è anche un'associazione che tratta di software geografici liberi ed <i>open source.</i></p>
             </div>
             <div class="col-sm-4">
               <h3>Impara ad usare QGIS</h3>
-              <p class="lead"><a href="http://qgis.org/it/site/">QGIS</a> è il software GIS open source più utilizzato al mondo!
-              </p>
+              <p class="lead"><a href="http://qgis.org/it/site/">QGIS</a> è il software GIS libero ed <i>open source.</i> più facile e pù utilizzato al mondo.</p>
             </div>
           </div><!-- /.row -->
         </div>
