--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
           <div class="featurette">
             <h2 class="featurette-heading">Vuoi avere maggiori informazioni? <span class="muted">Iscriviti.</span></h2>
             <p class="lead">Puoi iscriverti alla <a href="http://gfoss.it/cgi-bin/mailman/listinfo/gfoss">mailing list</a>  per rimanere aggiornato.</p>
-            <p class="lead">Se vuoi sostenere il nostro lavoro, dando una mano o un sostegno economico, o hai interesse a discutere in modo più approfondito delllo sviluppo, puoi scriverci a <a href=”mailto:info@qgis.it?subject=Info_da_sito”>.</p>            
+            <p class="lead">Se vuoi sostenere il nostro lavoro, dando una mano o un sostegno economico, o hai interesse a discutere in modo più approfondito delllo sviluppo, puoi <a href=”mailto:info@qgis.it?subject=Info_da_sito”>scriverci</a>.</p>            
           </div>
 
           <hr class="featurette-divider">
