--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
           <div class="featurette">
             <h2 class="featurette-heading">Partecipa alla comunit&agrave;</h2>
-            <p class="lead">Vuoi avere informazioni pi&grave; informazioni? Dare e ricevere aiuto? Appena possibile, organizzeremo incontri fra gli utenti italiani di QGIS. Nel frattempo, iscriviti alla <a href="http://gfoss.it/cgi-bin/mailman/listinfo/gfoss">mailing list di GFOSS</a>, che tratta di tutti i software liberi ed <i>open source</i> in ambito geografico. Tutti sono i benvenuti!
+            <p class="lead">Vuoi avere informazioni pi&ugrave; informazioni? Dare e ricevere aiuto? Appena possibile, organizzeremo incontri fra gli utenti italiani di QGIS. Nel frattempo, iscriviti alla <a href="http://gfoss.it/cgi-bin/mailman/listinfo/gfoss">mailing list di GFOSS</a>, che tratta di tutti i software liberi ed <i>open source</i> in ambito geografico. Tutti sono i benvenuti!
             </p>
           </div>
 
