--- a/index.html
+++ b/index.html
@@ -324,11 +324,11 @@
               
     <!-- Progress bar -->
 
-    <div class="container">
+    <div class="container-left">
         <h4 style="color:gray">Progresso donazioni</h4>
-                <p>Raggiunti <b>0&euro;</b> di <b>4500&euro;</b> totali</p>
+                <p>Raggiunti <b>0&euro;</b> di <b>5000&euro;</b> totali</p>
         <div class="progress">
-            <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%"> 100%      
+            <div class="progress-bar progress-bar-success progress-bar-striped active" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width:100%"> 100%      
             </div>
         </div>
     </div>
