--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
 <p>Se doni almeno <b>100&euro;</b> avrai l'opportunità di segnalare direttamente gli errori a cui verrà data priorità assouluta rispetto al normae flusso di lavoro </p>
 
 
-<p>Per <b>qualsiasi</b> informazione o dubbio contattaci <a href="mailto:traduzioni@qgis.it">info traduzioni QGIS</a></p>
+<p>Per <b>qualsiasi</b> informazione o dubbio <a href="mailto:traduzioni@qgis.it?subject=Info_traduzioni_qgis_sito">contattaci</a></p>
 
         
         <!-- Contatti -->
