--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
             <h2>Raccolta fondi</h2>
             <p class="lead">Questa campagna serve per raccogliere fondi necessari al mantenimento della traduzione di QGIS.
-            Il 20.02.2015 &egrave; stata rilasciata la prima versione LTR (<i>Long Term Release</i>) di QGIS, ovvero una versione stabile e duratura che verr&agrave; mantenuta inalterata per un lungo perido di tempo (fino al successivo rilascio di una LTR). <br>
+            Il 20.02.2015 &egrave; stata rilasciata la prima versione LTR (<i>Long Term Release</i>) di QGIS, ovvero una versione stabile e duratura che verr&agrave; mantenuta inalterata per un lungo periodo di tempo (fino al successivo rilascio di una LTR). <br>
             &Egrave; quindi fondamentale supportare questa campagna per avere una versione impeccabile di QGIS in italiano e per un lungo periodo. </p>
             <h2 style="color:gray">Introduzione</h2>
             <p class="lead">Da molti anni l'interfaccia di QGIS &egrave; completamente tradotta in italiano. Questo lavoro &egrave; stato possibile grazie all'aiuto di molti volontari che hanno dedicato il loro tempo (giorni e notti) alla traduzione di QGIS. Oltre all'interfaccia grafica, anche il manuale utente e il sito ufficiale sono stati tradotti, sempre grazie a un piccolo gruppo di persone volenterose. <br>
@@ -248,7 +248,7 @@
             Effettuare un <i>backporting</i>, ovvero applicare le modifiche e aggiornare il pacchetto non &egrave; compito facile.
             Oltre a ci&ograve; &egrave; importante garantire la coerenza terminologica fra i vari menu e sottomenu dell'interfaccia grafica per non confondere l'utente.<br>
             
-            Con il raggiungimento di questo obiettivo viene garantita la correzione degli errori presenti nella LTR 2.8.1, la corenza terminologica e il continuo mantenimento dell'interfaccia grafica.</p> <br>
+            Con il raggiungimento di questo obiettivo viene garantita la correzione degli errori presenti nella LTR 2.8.1, la coerenza terminologica e il continuo mantenimento dell'interfaccia grafica.</p> <br>
 
             <h3 style="color:gray">Pacchetto 3: aggiornamento manuale utente della versione LTR 2.8.1</h3>
             <h5 style="color:gray">Somma cumulata 5000&euro;</h5>
