--- a/index.html
+++ b/index.html
@@ -123,10 +123,10 @@
             <p class="lead">
             Scopi addizionali sono:
             <ul class="lead">
-                <li>Sostegno e coordinamento della traduzione in italiano di interfaccia, documentazione e sito</li>
-                <li>Divulgazione: incontri, articoli su riviste, discussioni in ambito GIS</li>
-                <li>Discussione dell'utilizzo di QGIS in settori specifici (Pubblica Amministrazione, geologia, urbanistica, ambiente, ecc.)</li>
-                <li>Organizzazione di incontri fra utenti</li>
+                <li>sostegno e coordinamento della traduzione in italiano di interfaccia, documentazione e sito</li>
+                <li>divulgazione: incontri, articoli su riviste, discussioni in ambito GIS</li>
+                <li>discussione dell'utilizzo di QGIS in settori specifici (Pubblica Amministrazione, geologia, urbanistica, ambiente, ecc.)</li>
+                <li>organizzazione di incontri fra utenti</li>
             </ul>
             </p>
             <p class="lead">
@@ -271,16 +271,16 @@
         <p class="lead">Con Transifex si possono tradurre molte stringhe in poco tempo. Tuttavia, ci sono delle linee guida per mantenere alta la qualit&agrave; della traduzione:
         <ul class="lead">
             <li>la barra di ricerca nella parte sinistra della finestra permette di filtrare rapidamente con diversi tipi di criteri. Imparare ad usarla &egrave; molto facile e utile</li>
-            <li>nella parte centrale in alto ci sono i numeri di quante stringhe sono tradotte (ALL), non tradotte (UNTRANSLATED) e revisionate (REVIEWED). Cliccando su <b>untransalted</b> permette di visualizzare solamente le stinghe da traurre</li>
+            <li>nella parte centrale in alto ci sono i numeri di quante stringhe sono tradotte (ALL), non tradotte (UNTRANSLATED) e revisionate (REVIEWED). Cliccando su <b>untransalted</b> si possono visualizzare solamente le stinghe da traurre</li>
             <li>la parte <b>destra</b> &egrave; composta da diverse schede molto utili:
             <ol>
-                <li><b>Suggestions</b> che mostra eventuali suggerimenti di stinghe tradotte in modo simile con la <b>percentuale di similarit&agrave;</b>. In questo modo si possono vedere subito stringhe gi&agrave; con simili al 99% e baster&agrave; una minima modifica per completare la traduzione</li>
+                <li><b>Suggestions</b> che mostra eventuali suggerimenti di stinghe tradotte in modo simile con la <b>percentuale di similarit&agrave;</b>. In questo modo si possono vedere subito stringhe simili al 99% e baster&agrave; quindi una minima modifica per completare la traduzione</li>
                 <li><b>History</b> che mostra lo storico delle traduzioni di quella stringa e permette di vedere l'evoluzione della traduzione</li>
-                <li><b>Glossary</b> mostra tutte le parole prensenti nel glossario che compaiono nella stringa selezionata. Il glossario &egrave; una <b>risorsa fondamentale</b> da utilizzare per rendere la traduzione coerente</li>
+                <li><b>Glossary</b> mostra tutte le parole prensenti nel glossario e che compaiono nella stringa selezionata. Il glossario &egrave; una <b>risorsa fondamentale</b> da utilizzare per rendere la traduzione coerente</li>
             </ol>
             </li>
             <li>nella parte in alto a destra &egrave; presente un pulsante <b>FONDAMENTALE</b> da utilizzare spesso: <b>Concordance search</b>. Questo pulsante cerca in <b>tutti</b> i progetti di QGIS come &egrave; stata tradotta una parola e mostra le varie concordanze. Questa risorsa &egrave; fondamentale per garantiere un'alta qualit&agrave; della traduzione e fare in modo che i termini siano tradotti in modo simile in tutti i progetti di QGIS</li>
-            <li>nella scheda centrale (dove si pu&ograve; inserire la traduzione della stringa) nella parte inferiore si possono vedere delle informazioni aggiuntive sulla stringa. A volte ci sono informazioni sul <b>contesto</b> della stringa e sul percorso. Se si hanno dubbi su come tradurre la stringa queste informazioni aggiunti possono aiutare moltissimo</li>
+            <li>nella scheda centrale (dove si pu&ograve; inserire la traduzione della stringa) nella parte inferiore si possono vedere delle informazioni aggiuntive sulla stringa. A volte ci sono informazioni sul <b>contesto</b> della stringa e sul percorso. Se si hanno dubbi su come tradurre la stringa queste informazioni aggiuntive possono aiutare moltissimo</li>
             <li>in generale, se si hanno dei dubbi <b>NON</b> tradurre, ma scrivere in lista dove possiamo discutere apertamente e trovare la traduzione migliore</li>
         </ul>
         </p>
