--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
               segli il progetto a cui vuoi contribuire cliccandoci sopra
               </li>
               <li>l'amministratore vedr&agrave; la tua iscrizione e ti accetter&agrave; nel team dei traduttori</li>
-              <li>ogni progetto &egrave; composta da una a pi&ugrave; risorse (corrispondenti per esempio ai capitoli del manuale). Clicca sulla risorsa che vuoi tradurre e clicca su <b>translate</b>.</li>
+              <li>ogni progetto &egrave; composto da una a pi&ugrave; risorse (corrispondenti per esempio ai capitoli del manuale). Clicca sulla risorsa che vuoi tradurre e clicca su <b>translate</b>.</li>
               <li>pronti, via! Traduci le stringhe che vuoi, Transifex salver&agrave; automaticamente le nuove stringhe tradotte</li>
         </ul>
         </p>
