--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </p>
             <ul class="lead">
                 <li>versa la quota annua sul <a href="#bank">conto di QGIS</a>, specificando nella causale: <i>Italian QGIS UserGroup</i></li>
-                <li>invia il riscontro del pagamento al <a href="mailto:info@qgis.it?subject=Iscrizione_gruppo">coordinatore</a></li>
+                <li><a href="mailto:info@qgis.it?subject=Iscrizione_gruppo">inviaci</a> il riscontro del pagamento</li>
                 <li>verrai iscritto alla mailing list del gruppo</li>
                 <li>una volta l'anno tutti i partecipanti voteranno per decidere la destinazione dei fondi raccolti, e periodicamente per nominare il rappresentante italiano nell'associazione QGIS internazionale</li>
             </ul>
@@ -271,7 +271,7 @@
         <p class="lead">Con Transifex si possono tradurre molte stringhe in poco tempo. Tuttavia, ci sono delle linee guida per mantenere alta la qualit&agrave; della traduzione:
         <ul class="lead">
             <li>la barra di ricerca nella parte sinistra della finestra permette di filtrare rapidamente con diversi tipi di criteri. Imparare ad usarla &egrave; molto facile e utile</li>
-            <li>nella parte centrale in alto ci sono i numeri di quante stringhe sono tradotte (ALL), non tradotte (UNTRANSLATED) e revisionate (REVIEWED). Cliccando su <b>untransalted</b> si possono visualizzare solamente le stinghe da traurre</li>
+            <li>nella parte centrale in alto ci sono i numeri di quante stringhe sono tradotte (ALL), non tradotte (UNTRANSLATED) e revisionate (REVIEWED). Cliccando su <b>untranslated</b> si possono visualizzare solamente le stinghe da traurre</li>
             <li>la parte <b>destra</b> &egrave; composta da diverse schede molto utili:
             <ol>
                 <li><b>Suggestions</b> che mostra eventuali suggerimenti di stinghe tradotte in modo simile con la <b>percentuale di similarit&agrave;</b>. In questo modo si possono vedere subito stringhe simili al 99% e baster&agrave; quindi una minima modifica per completare la traduzione</li>
@@ -285,7 +285,7 @@
         </ul>
         </p>
 
-<p class="lead">Per qualsiasi informazione o dubbio <a href="mailto:traduzioni@qgis.it?subject=Info_traduzioni_qgis_sito">contattaci</a></p>
+<p class="lead">Per qualsiasi informazione o dubbio <a href="mailto:traduzioni@qgis.it?subject=Info_traduzioni_qgis_sito">scrivici</a></p>
         <!-- Contatti -->
 
           <hr class="featurette-divider">
