--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             <h2 class="featurette-heading">Traduzioni</h2>
             <p class="lead">Avere tutto QGIS, incluso il programma, i manuali e il sito web, tradotti in italiano &egrave; una bella comodit&agrave;; questo richiede uno sforzo notevole, per cui il tuo aiuto &egrave; essenziale.</p>
 
-          <h3>Wiki per la traduzione</h3>
+          <h3>Istruzioni per la traduzione</h3>
           <p class="lead">Tradurre QGIS &egrave; facile e veloce! <b>Tutte</b> le risorse di QGIS (manuali, sito web e interfaccia grafica) sono ospitate sulla piattaforma di localizzazione <a href="http://www.transifex.com"> Transifex</a>. <br>
           Se vuoi unirti al gruppo dei traduttori sei il benvenuto! 
           Il processo richiede pochissimo tempo:
