--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             Come partecipare:
             </p>
             <ul class="lead">
-                <li>versa la quota annua sul <a href="#bank">conto di QGIS</a>, specificando nella causale: <i>Italian QGIS UserGroup</i></li>
+                <li>versa la quota annua sul <a href="#bank">conto di QGIS</a>, oppure tramite <a href="http://www.qgis.org/it/site/getinvolved/donations.html#paypal">Paypal</a> (aggiungendo il 4% per le spese), specificando nella causale: <i>Italian QGIS UserGroup</i></li>
                 <li><a href="mailto:info@qgis.it?subject=Iscrizione_gruppo">inviaci</a> il riscontro del pagamento</li>
                 <li>verrai iscritto alla mailing list del gruppo</li>
                 <li>una volta l'anno tutti i partecipanti voteranno per decidere la destinazione dei fondi raccolti, e periodicamente per nominare il rappresentante italiano nell'associazione QGIS internazionale</li>
