--- a/traduzione.html
+++ b/traduzione.html
@@ -25,7 +25,12 @@
 
   <body>
     <!-- QGIS.org NAVBAR -->
-    <div class="navbar navbar-default" role="navigation">
+    
+<!-- This is the old navbar, not static!-->
+<!-- <div class="navbar navbar-default" role="navigation"> -->
+
+<!--new navbar position: fixed on top -->
+    <div class="navbar navbar-fixed-top" role="navigation">
       <div class="container-fluid">
         <!-- .btn-navbar is used as the toggle for collapsed navbar content -->
         <!-- Brand and toggle get grouped for better mobile display -->
@@ -70,12 +75,12 @@
 
     <!-- TITLE & PAGE NAV -->
     <div class="container">
-      <div class="container">
+      <div class="container-page">
         <div class="row">
           <div class="col-xs-12 page-title"><a href="http://qgis.it">Gruppo degli utenti italiani di QGIS</a></div>
         </div>
         <div class="row">
-          <div class="col-sm-12 col-md-6 col-md-offset-3">
+          <div class="col-sm-12 col-md-8">
             <ul class="page-nav">
               <li>
                 <a href="http://qgis.it/#about">Obiettivi</a>
