--- a/traduzione.html
+++ b/traduzione.html
@@ -49,6 +49,7 @@
             <li><a href="http://qgis.org/it/site/forusers/index.html">Per gli utenti</a></li>
             <li><a href="http://qgis.org/it/site/getinvolved/index.html">Partecipa</a></li>
             <li><a href="http://qgis.org/it/docs/index.html">Documentazione</a></li>
+            <li><a href="http://qgis.it/traduzione.html">Traduzione</a></li>
             <li class="navbar-dropdown">
               <div class="select-dropdown">
               <select id="other_groups">
