--- a/traduzione.html
+++ b/traduzione.html
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://qgis.org"></a>
+          <a class="navbar-brand" href="http://qgis.org/it/site/"></a>
         </div>
         <div class="collapse navbar-collapse" id="nav-collapse">
           <ul class="nav navbar-nav">
