modifica nome mailing list

--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
 
           <div class="featurette">
             <h2 class="featurette-heading">Partecipa alla comunit&agrave;</h2>
-            <p class="lead">Vuoi avere informazioni pi&ugrave; informazioni? Dare e ricevere aiuto? Iscriviti alla <a href="http://gfoss.it/cgi-bin/mailman/listinfo/gfoss">mailing list di GFOSS</a>, che tratta di tutti i software liberi ed <i>open source</i> in ambito geografico. Tutti sono i benvenuti!
-            </p>
+            <p class="lead">Vuoi avere informazioni pi&ugrave; informazioni su <b>QGIS</b>? Dare e ricevere aiuto? Allora iscriviti alla <a href="http://lists.qgis.it/cgi-bin/mailman/listinfo/utenti">mailing list degli utenti di QGIS</a>.
+            <p>Per discussioni pi&ugrave; generali iscriviti invece alla mailing list di <a href="http://gfoss.it/cgi-bin/mailman/listinfo/gfoss">GFOSS</a></p>            
           </div>
 
         <!-- Collabora -->
@@ -229,7 +229,7 @@
             <p class="lead">QGIS viene sviluppato da un gruppo di volontari. Puoi partecipare a QGIS nei vari canali di supporto, segnalare problemi, migliorare la documentazione e la traduzione, creare tutorial, promuovere l'uso di QGIS e sostenere gli sviluppatori nel loro lavoro.</p>
           </div>
 
-        <!-- Sostieni -->
+        <!-- Sostieni --> 
 
           <hr class="featurette-divider">
           <a name="support"></a>
