--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
           <div class="featurette">
             <h2 class="featurette-heading">Partecipa alla comunit&agrave;</h2>
-            <p class="lead">Vuoi avere informazioni pi&ugrave; informazioni su <b>QGIS</b>? Dare e ricevere aiuto? Allora iscriviti alla <a href="http://lists.qgis.it/cgi-bin/mailman/listinfo/utenti">mailing list degli utenti di QGIS</a>
+            <p class="lead">Vuoi avere informazioni pi&ugrave; informazioni su <b>QGIS</b>? Dare e ricevere aiuto? Allora iscriviti alla <a href="https://lists.osgeo.org/mailman/listinfo/qgis-it-user">mailing list degli utenti di QGIS</a>
             <p>Per discussioni pi&ugrave; generali iscriviti invece alla mailing list di <a href="http://gfoss.it/cgi-bin/mailman/listinfo/gfoss">GFOSS</a></p>            
           </div>
 
