Bank account updated

--- a/index.html
+++ b/index.html
@@ -269,11 +269,14 @@
           <a name="bank"></a>
 <h3>Conto corrente di QGIS</h3>
 <p>
-Account name: QGIS User Group Switzerland</br>
-BIC/SWIFT:    MIGRCHZZ80A</br>
-IBAN:         CH87 0840 1000 0570 8858 6</br>
-Bank name:    Migros Bank</br>
-Bank address: Hauptgasse 49, 4502 Solothurn, Switzerland
+Account name: QGIS.ORG</br>
+Address: Boeschacherstrasse 10a, CH-8624 Gruet</br>
+BIC/SWIFT:    POFICHBEXXX</br>
+IBAN:         CH09 0900 0000 9146 3839 8</br>
+Reference: Donation QGIS</br>
+Currency: EUR</br>
+Bank name:    PostFinance AG</br>
+Bank address: Mingerstrasse 20, 3030 Berne, Switzerland
 </p>
         </div>
       </div>
