--- a/processing_tests.html
+++ b/processing_tests.html
@@ -96,7 +96,7 @@
                 <a href="#support">Sostieni</a>
               </li>
               <li>
-                <a href="#processing-test">Processing Test</a>
+                <a href="http://qgis.it/processing_tests.html">Processing Test</a>
               </li>
               <li>
                 <a href="#translation">Traduzioni</a>
